# MAYO-LLVM-Examples

./: .clangd  .gitignore  CMakeLists.txt  README.md  cmds.txt  correct.smt2  fault_prop.cpp  funcSkip.smt2  loopSkip.cpp  loop_fn_Fault.cpp  mayo_pass.cpp  original.ll  smt_parser2.cpp  smt_parser3.cpp  valid_functions.txt  z3_bv_correct.smt2  z3_bv_faulty.smt2
fault_types/: CMakeLists.txt  binOpFault.cpp  loop_fn_Fault.cpp
function_inputs/: P1P1t_times_O.json  P1_times_O.json  P1_times_Vt.json  P3.json  compute_A.json  compute_M_and_VPV.json  compute_P3.json  compute_rhs.json  decode.json  encode.json  expand_P1_P2.json  mat_mul.json  mayo_expand_sk.json  mayo_sign_signature.json  mul_add_mat_trans_x_m_mat.json
mayo_IR/: mayo2.ll  mayo3.ll  mayo5.ll
mayo_ll/: mayo1.ll
results/loopOrFuncSkip/: funcSkip.ll
